A movie-app built with react js .In this project we can search movie and that can add in our favorites and also we can remove movies from the favorite list.This favorites will be permenant util its deleted manually.

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@
     /* font-family: "Sofia", cursive; */
     font-family: "Space Grotesk", sans-serif;
 }
+/* @media (max-width:480px){
+    *{
+        overflow-x: hidden;
+    }
+} */
